# apportionment-calculator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
custom/: README.txt
data/: us1990.tsv  us2000.txt  us2010.txt  us2020.tsv  us2020.txt
data/us/: us2000.tsv  us2010.tsv
data/us_states/: alabama2020.tsv  alabama2021.tsv  alaska2020.tsv  alaska2021.tsv  arizona2020.tsv  arizona2021.tsv  arkansas2020.tsv  arkansas2021.tsv  california2020.tsv  california2021.tsv  colorado2020.tsv  colorado2021.tsv  connecticut2020.tsv  connecticut2021.tsv  delaware2020.tsv  delaware2021.tsv  florida2020.tsv  florida2021.tsv  georgia2020.tsv  georgia2021.tsv  hawaii2020.tsv  hawaii2021.tsv  idaho2020.tsv  idaho2021.tsv  illinois2020.tsv  illinois2021.tsv  indiana2020.tsv  indiana2021.tsv  iowa2020.tsv  iowa2021.tsv  kansas2020.tsv  kansas2021.tsv  kentucky2020.tsv  kentucky2021.tsv  louisiana2020.tsv  louisiana2021.tsv  maine2020.tsv  maine2021.tsv  maryland2020.tsv  maryland2021.tsv  (+60 more)
src/: main.rs  state.rs
