[package]
name = "apportionment-calculator"
version = "1.2.1"
authors = ["Dominic Rutkowski <rutkowski.dominic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
